<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prepaid Cafeteria</string>
    <string name="action_settings">Log Out</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="txtitems">Items in Cart</string>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Labels -->

    <string name="refresh">Refresh</string>
    <string name="txtuser">Username</string>
    <string name="txtpass">Password</string>
    <string name="btnlogin">Log In</string>
    <string name="btnviewcart">View Food Cart</string>
    <string name="btnremovecart">Remove from Cart</string>
    <string name="btncheckout">Checkout</string>
    <string name="txtquantity">Quantity</string>
    <string name="txtsubtotal">Subtotal</string>
    <string name="txtremovecart">Remove from Cart</string>
    <string name="txtcheckout">Proceed to Checkout</string>
    <string name="txtclickonlist">Click on product to edit quantity</string>
    <string name="txtcart">Shopping Cart</string>
    <string name="txtsetquan">Add Quantity</string>
    <string name="txtcurrentcart">Currently in Cart</string>
    <string name="quantity">E.g. 1</string>
    <string name="txtproductcatalog">Product Catalog</string>
    <string name="txtlogin">Log In</string>
    <string name="txtnointernet">No Connectivity</string>
    <string name="txtnotconnected">Your computer isn’t connected to the Internet.</string>
    <string name="txtsearch">Search any...</string>
    <string name="menulogout">Log Out</string>

    <string name="txtbillinfo">Billing Information</string>
    <string name="txtcartsum">Cart Summary</string>
    <string name="txtcheckoutnow">Checkout</string>
    <string name="checkbal">Check Balance</string>
    <string name="itemscart">0 items in cart</string>
    <string name="forgotpass">Forgot password? Click here</string>
    <string name="submit">Submit</string>
    <string name="viewtrans">View Transaction History</string>
    <string name="txttrans">Transaction History</string>

    <string name="id">Transaction ID</string>
    <string name="product">Product Name</string>
    <string name="quantityy">Quantity</string>
    <string name="amount">Price</string>
    <string name="date">Date of Transaction</string>
    <string name="btnclose">Close</string>
    <string name="txtpeso">P</string>
    <string name="txtstatus">Status</string>
    <string name="timec">Time Claimed</string>
    <string name="timeo">Time Ordered</string>

    <string name="txtretrievepw">Manage Account</string>

    <string name="txtprodid">ID</string>
    <string name="btncancel">Cancel</string>
    <string name="txtcateg">Category</string>
    <string name="txtdesc">Description</string>
    <string name="txttotal">Total Price</string>
</resources>
